// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should render 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdvvtL fCrhkg"
          height="16"
          width="16"
        />
      </div>
    </span>
  </div>
</div>
`;

exports[`Dropdown should render a bottom position 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdvvtL fCrhkg"
          height="16"
          width="16"
        />
      </div>
    </span>
    <div
      class="Dropdown__Wrapper-sc-4ty2ol-0 fueqtp opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl"
      data-testid="dropdown__content"
      style="opacity: 1; height: -30px; overflow-y: scroll;"
    >
      <ul
        data-testid="dropdown__options"
      >
        <li
          class="sc-gsDKAQ bwZfGu group"
          data-testid="dropdown__option--0"
          tabindex="0"
        >
          <span>
            Option 1
          </span>
        </li>
        <li
          class="sc-gsDKAQ bwZfGu group"
          data-testid="dropdown__option--1"
          tabindex="0"
        >
          <span>
            Option 2
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render a bottom-left position 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdvvtL fCrhkg"
          height="16"
          width="16"
        />
      </div>
    </span>
    <div
      class="Dropdown__Wrapper-sc-4ty2ol-0 dTSLVn opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl"
      data-testid="dropdown__content"
      style="opacity: 1; height: -30px; overflow-y: scroll;"
    >
      <ul
        data-testid="dropdown__options"
      >
        <li
          class="sc-gsDKAQ bwZfGu group"
          data-testid="dropdown__option--0"
          tabindex="0"
        >
          <span>
            Option 1
          </span>
        </li>
        <li
          class="sc-gsDKAQ bwZfGu group"
          data-testid="dropdown__option--1"
          tabindex="0"
        >
          <span>
            Option 2
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render a large one 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdvvtL qGXhc"
          height="20"
          width="20"
        />
      </div>
    </span>
  </div>
</div>
`;

exports[`Dropdown should render a left position 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdvvtL fCrhkg"
          height="16"
          width="16"
        />
      </div>
    </span>
    <div
      class="Dropdown__Wrapper-sc-4ty2ol-0 cAlCbR opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl"
      data-testid="dropdown__content"
      style="opacity: 1; height: -30px; overflow-y: scroll;"
    >
      <ul
        data-testid="dropdown__options"
      >
        <li
          class="sc-gsDKAQ bwZfGu group"
          data-testid="dropdown__option--0"
          tabindex="0"
        >
          <span>
            Option 1
          </span>
        </li>
        <li
          class="sc-gsDKAQ bwZfGu group"
          data-testid="dropdown__option--1"
          tabindex="0"
        >
          <span>
            Option 2
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render a small one 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdvvtL Cfvxc"
          height="10"
          width="10"
        />
      </div>
    </span>
  </div>
</div>
`;

exports[`Dropdown should render a top 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdvvtL fCrhkg"
          height="16"
          width="16"
        />
      </div>
    </span>
    <div
      class="Dropdown__Wrapper-sc-4ty2ol-0 iorzXR opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl"
      data-testid="dropdown__content"
      style="opacity: 1; height: -30px; overflow-y: scroll;"
    >
      <ul
        data-testid="dropdown__options"
      >
        <li
          class="sc-gsDKAQ bwZfGu group"
          data-testid="dropdown__option--0"
          tabindex="0"
        >
          <span>
            Option 1
          </span>
        </li>
        <li
          class="sc-gsDKAQ bwZfGu group"
          data-testid="dropdown__option--1"
          tabindex="0"
        >
          <span>
            Option 2
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render a top-left position 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdvvtL fCrhkg"
          height="16"
          width="16"
        />
      </div>
    </span>
    <div
      class="Dropdown__Wrapper-sc-4ty2ol-0 iKxZuT opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl"
      data-testid="dropdown__content"
      style="opacity: 1; height: -30px; overflow-y: scroll;"
    >
      <ul
        data-testid="dropdown__options"
      >
        <li
          class="sc-gsDKAQ bwZfGu group"
          data-testid="dropdown__option--0"
          tabindex="0"
        >
          <span>
            Option 1
          </span>
        </li>
        <li
          class="sc-gsDKAQ bwZfGu group"
          data-testid="dropdown__option--1"
          tabindex="0"
        >
          <span>
            Option 2
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render a top-right 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdvvtL fCrhkg"
          height="16"
          width="16"
        />
      </div>
    </span>
    <div
      class="Dropdown__Wrapper-sc-4ty2ol-0 cZoEeM opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl"
      data-testid="dropdown__content"
      style="opacity: 1; height: -30px; overflow-y: scroll;"
    >
      <ul
        data-testid="dropdown__options"
      >
        <li
          class="sc-gsDKAQ bwZfGu group"
          data-testid="dropdown__option--0"
          tabindex="0"
        >
          <span>
            Option 1
          </span>
        </li>
        <li
          class="sc-gsDKAQ bwZfGu group"
          data-testid="dropdown__option--1"
          tabindex="0"
        >
          <span>
            Option 2
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render dropdown group options with divider, icon and secondary label 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdvvtL fCrhkg"
          height="16"
          width="16"
        />
      </div>
    </span>
    <div
      class="Dropdown__Wrapper-sc-4ty2ol-0 cZoEeM opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl"
      data-testid="dropdown__content"
      style="opacity: 1; height: -30px; overflow-y: scroll;"
    >
      <div
        class="pt-5 pb-1"
      >
        <div
          class="mt-4 first:mt-0"
        >
          <ul>
            <li
              class="block px-8 text-xs font-bold text-left uppercase whitespace-nowrap text-theme-secondary-500 dark:text-theme-secondary-600"
            >
              Primary Options 1
            </li>
            <ul
              data-testid="dropdown__options"
            >
              <li
                class="sc-gsDKAQ bwZfGu group"
                data-testid="dropdown__option--primary-0"
                tabindex="0"
              >
                <span>
                  Primary Options 1.1
                </span>
              </li>
              <li
                class="sc-gsDKAQ bwZfGu group"
                data-testid="dropdown__option--primary-1"
                tabindex="0"
              >
                <span>
                  Primary Options 1.2
                </span>
              </li>
            </ul>
          </ul>
        </div>
        <div
          class="mt-4 first:mt-0"
        >
          <div
            class="mx-8 -my-2"
          >
            <div
              class="Divider-sc-17ehhxk-0 hoeInf border-theme-secondary-300 dark:border-theme-secondary-600"
              type="horizontal"
            />
          </div>
          <ul>
            <li
              class="block px-8 text-xs font-bold text-left uppercase whitespace-nowrap text-theme-secondary-500 dark:text-theme-secondary-600"
            >
              Secondary Options 1
            </li>
            <ul
              data-testid="dropdown__options"
            >
              <li
                class="sc-gsDKAQ bwZfGu group"
                data-testid="dropdown__option--secondary-0"
                tabindex="0"
              >
                <span>
                  Secondary Options 1.1
                </span>
                <div
                  class="sc-bdvvtL fCrhkg dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
                  height="16"
                  width="16"
                />
              </li>
              <li
                class="sc-gsDKAQ bwZfGu group"
                data-testid="dropdown__option--secondary-1"
                tabindex="0"
              >
                <div
                  class="sc-bdvvtL fCrhkg dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
                  height="16"
                  width="16"
                />
                <span>
                  Secondary Options 1.2
                  <span
                    class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-600"
                  >
                    secondary label
                  </span>
                </span>
              </li>
            </ul>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render toggle icon 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdvvtL fCrhkg"
          height="16"
          width="16"
        />
      </div>
    </span>
  </div>
</div>
`;

exports[`Dropdown should render with a disabled option 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdvvtL fCrhkg"
          height="16"
          width="16"
        />
      </div>
    </span>
    <div
      class="Dropdown__Wrapper-sc-4ty2ol-0 ihNlLq opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl"
      data-testid="dropdown__content"
      style="opacity: 1; height: -30px; overflow-y: scroll;"
    >
      <ul
        data-testid="dropdown__options"
      >
        <li
          aria-disabled="true"
          class="sc-gsDKAQ eISQyF"
          data-testid="dropdown__option--0"
          disabled=""
          tabindex="-1"
        >
          <span>
            Disabled Option
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render with custom toggle content as function 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div>
        Dropdown is open: 
      </div>
    </span>
  </div>
</div>
`;

exports[`Dropdown should render with custom toggle content as react element 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div>
        custom toggle
      </div>
    </span>
  </div>
</div>
`;

exports[`Dropdown should render with options 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdvvtL fCrhkg"
          height="16"
          width="16"
        />
      </div>
    </span>
  </div>
</div>
`;

exports[`Dropdown should render without options one 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdvvtL fCrhkg"
          height="16"
          width="16"
        />
      </div>
    </span>
    <div
      class="Dropdown__Wrapper-sc-4ty2ol-0 cZoEeM opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl"
      data-testid="dropdown__content"
      style="opacity: 1; height: -30px; overflow-y: scroll;"
    >
      <div
        class="pt-5 pb-1"
      />
    </div>
  </div>
</div>
`;
